<resources>
    <string name="app_name">DRONE WORLD 1.1</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">demo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_About">About</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_Client">Client</string>
    <string name="menu_ContactUs">Contact Us</string>
</resources>