<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/about"
            android:title="@string/menu_About" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
<!--        <item-->
<!--            android:id="@+id/nav_Client"-->
<!--            android:icon="@drawable/client"-->
<!--            android:title="@string/menu_Client" />-->
<!--        <item-->
<!--            android:id="@+id/nav_ContactUs"-->
<!--            android:icon="@drawable/baseline_contacts_24"-->
<!--            android:title="@string/menu_ContactUs" />-->


    </group>
</menu>